Fix decomposition of f result to reflect unambiguous ids
Complete Xy2M metadata