@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "idict"
-version = "4.211229.1"
+version = "4.220105.0"
 description = "Lazy dict with predictable deterministic universally unique identifiers"
 authors = ["davips <dpsabc@gmail.com>"]
 license = "GPL"
